Responsividade adicionada e sistema de rolagem de página.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <input class="input-button" type="button" value="Sign In">
+                <div class="options-login">
+                    <p href="#" class="register" onclick="scrollPage()">Not registered?</p>
+                    <a href="#">Forgot your password?</a>
+                </div>
             </form>
         </article>
     </aside>
@@ -36,5 +40,6 @@
     </section>
 
     <script src="https://kit.fontawesome.com/3854458189.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
