Editado readme.md

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <input class="input-button" type="button" value="Sign In">
-                <div class="options-login">
+                <div class="login-options">
                     <p href="#" class="register" onclick="scrollPage()">Not registered?</p>
                     <a href="#">Forgot your password?</a>
                 </div>
